--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm run test:html &&  npm run test:js",
     "test:html": "glob-run nu-html-checker *.html",
-    "test:js": "jshint *.html",
+    "test:js": "jshint js/script.js",
     "init-project": "npm run init:dirs && npm run init:files && npm run init:gitignore && npm run init:npm-install",
     "init:dirs": "mkdir -p sass css vendor images js",
     "init:files": "touch README.md index.html sass/style.scss js/script.js",
